--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
 
   build:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -31,13 +31,12 @@ jobs:
           if [ -d "./vendor" ]; then echo "Forbidden external libs folder (vendor/) found !"; exit 2; fi
 
       # Runs a single command using the runners shell
-      - name: Composer
-        run: composer install
       - name: ComposerUpdate
         run: composer update
+      - name: Composer
+        run: composer install
       - name: code_quality
         run: |
           ./vendor/bin/phpcs
           ./vendor/bin/phpstan analyse src --level 5
           ./vendor/bin/phpmd src text phpmd.xml
-          ./vendor/bin/phpunit
