--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,9 @@
         "filp/whoops": "^2.15",
         "phpro/grumphp": "^1.9",
         "phpstan/phpstan": "^1.10.7",
-        "phpunit/phpunit": "^11.2"
+        "phpunit/phpunit": "^11.2",
+        "squizlabs/php_codesniffer": "^3.10",
+        "phpmd/phpmd": "^2.15"
        
     },
     "config": {
